# rustLearning1

./: 1.csv  2.csv  Cargo.toml  Dockerfile
lab1/: Cargo.toml
lab1/src/: main.rs
lab2/: Cargo.toml
lab3/: Cargo.toml
lab4/: Cargo.toml
lab4/src/: lib.rs
module1/: Cargo.toml
module1/src/: main.rs
readcsv/: Cargo.toml
readcsv/src/: lib.rs
readfs/: Cargo.toml
readfs/src/: lib.rs
