[package]
name = "lab1"
version = "1.0.0"
authors = ["Tonman Neverwalk Alone <tonmanna@gmail.com>"]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.7"
serde = "1.0.99"
csv = "1.1"
actix-web = "1.0.7"
lab2 = { path = "../lab2" }
lab3 = { path = "../lab3" }
readcsv = { path = "../readcsv" }
readfs = { path = "../readfs/" }